Use common CSS class name on PrincipalContainerSelectedEntryView, fix layout issues (#2079)

--- a/src/main/resources/assets/admin/common/styles/api/ui/security/acl/access-control-entry.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/security/acl/access-control-entry.less
@@ -8,6 +8,60 @@
 
   &.names-and-icon-viewer {
     overflow: visible;
+
+    &.readonly {
+      padding-right: 28px; // Leave room for the hidden X icon
+    }
+
+    .names-and-icon-view {
+      float: left;
+      margin: 0 10px 0 0;
+      min-width: 200px;
+      flex: 1 auto;
+    }
+
+    .access-selector {
+      float: left;
+      min-width: 100px;
+      width: 120px;
+      margin: 0 10px 0 0;
+
+      &.expanded {
+        .tab-menu-button {
+          background-color: @admin-blue;
+
+          .label {
+            color: @admin-white;
+          }
+        }
+      }
+
+      .tab-menu-button {
+        text-align: left;
+        margin: 2px 0 0;
+        padding: 4px 5px;
+        color: @admin-font-gray3;
+        background-color: transparent;
+
+        .ellipsis();
+
+        &:before {
+          display: none;
+        }
+
+        .label {
+          margin: 0;
+          color: @admin-blue;
+        }
+      }
+    }
+
+    .permission-selector {
+      display: none;
+      clear: left;
+      flex: 100%;
+      order: 3;
+    }
   }
 
   &.dirty {
@@ -28,59 +82,4 @@
       }
     }
   }
-
-  .names-and-icon-view {
-    float: left;
-    margin: 0 10px 0 0;
-    min-width: 200px;
-    flex: 1 auto;
-  }
-
-  .permission-selector {
-    display: none;
-    clear: left;
-  }
-
-  .access-selector {
-    float: left;
-    min-width: 100px;
-    width: 120px;
-    margin: 0 10px 0 0;
-
-    &.expanded {
-      .tab-menu-button {
-        background-color: @admin-blue;
-
-        .label {
-          color: @admin-white;
-        }
-      }
-    }
-
-    .tab-menu-button {
-      text-align: left;
-      margin: 2px 0 0;
-      padding: 4px 5px;
-      color: @admin-font-gray3;
-      background-color: transparent;
-
-      .ellipsis();
-
-      &:before {
-        display: none;
-      }
-
-      .label {
-        margin: 0;
-        color: @admin-blue;
-      }
-
-    }
-
-  }
-
-  .permission-selector {
-    flex: 100%;
-  }
-
 }
